finished header section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 <body class="font-sora">
     <header>
+      <!-- navbar -->
        <nav class="bg-[#FFF9F4]">
         <div class="navbar mx-auto lg:container">
           <div class="navbar-start h-3/5">
@@ -62,6 +63,21 @@
           </div>  
         </div>
        </nav>
+       <!-- hero -->
+       <div class=" my-10 lg:container lg:mt-0 mx-auto">
+        <div class=" lg:absolute lg:mt-40 lg:w-1/2 mx-3">
+          <h1 class="text-6xl font-adlam">Pamper Your Pet, <br>
+             Because They Deserve <br>
+              the Bes</h1>
+          <p class="text-xl my-5">Discover a world of treats, toys, and essentials handpicked for <br>
+             your furry friends. Shop now and make tails wag with joy!</p>
+          <a class="btn bg-[#FFDC26]">Find a pet</a>
+        </div>
+          
+        <div>
+          <img src="c1-assets/cat-big.png" class="w-full" alt="a cat">
+        </div>
+       </div>
     </header>
     
 </body>
