added tending product sextion

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           </div>  
         </div>
        </nav>
-       <!-- hero -->
+      <!-- hero -->
        <div class=" my-10 lg:container lg:mt-0 mx-auto">
-        <div class=" lg:absolute lg:mt-40 lg:w-1/2 mx-3">
+        <div class=" md:absolute md:mt-40 md:w-1/2 mx-3">
           <h1 class="text-6xl font-adlam">Pamper Your Pet, <br>
              Because They Deserve <br>
               the Bes</h1>
@@ -79,6 +79,264 @@
         </div>
        </div>
     </header>
-    
+    <main>
+      <!-- Categories -->
+      <div class="lg:container my-24 mx-auto">
+        <h3 class="font-adlam text-4xl mb-12">Browse By Categories</h3>
+      <div class="grid grid-cols-2 gap-5 lg:grid-cols-6">
+
+        <!-- card 1 -->
+        <div class="h-64 w-48 bg-[#F9DF8A] flex flex-col justify-center items-center bg rounded-xl ml-4 lg:ml-0">
+          <img src="c1-assets/dog-cartoon.png" class="bg-white p-4 rounded-full mb-5" alt="dog logo">
+          <h6 class="font-bold">Dog</h6>
+          <p>3 items</p>
+        </div>
+        <!-- card 2 -->
+        <div class="h-64 w-48 bg-[#F9DF8A] flex flex-col justify-center items-center bg rounded-xl ">
+          <img src="c1-assets/fish-cartoon.png" class="bg-white p-4 rounded-full mb-5" alt="dog logo">
+          <h6 class="font-bold">Fish</h6>
+          <p>3 items</p>
+        </div>
+        <!-- card 3 -->
+        <div class="h-64 w-48 bg-[#F9DF8A] flex flex-col justify-center items-center bg rounded-xl ml-4 lg:ml-0">
+          <img src="c1-assets/cat-cartoon.png" class="bg-white p-4 rounded-full mb-5" alt="dog logo">
+          <h6 class="font-bold">Cat</h6>
+          <p>3 items</p>
+        </div>
+        <!-- card 4 -->
+        <div class="h-64 w-48 bg-[#F9DF8A] flex flex-col justify-center items-center bg rounded-xl">
+          <img src="c1-assets/bird-cartoon.png" class="bg-white p-4 rounded-full mb-5" alt="dog logo">
+          <h6 class="font-bold">Birds</h6>
+          <p>3 items</p>
+        </div>
+        <!-- card 5 -->
+        <div class="h-64 w-48 bg-[#F9DF8A] flex flex-col justify-center items-center bg rounded-xl ml-4 lg:ml-0">
+          <img src="c1-assets/mouse-cartoon.png" class="bg-white p-4 rounded-full mb-5" alt="dog logo">
+          <h6 class="font-bold">Small pet</h6>
+          <p>3 items</p>
+        </div>
+        <!-- card 6 -->
+        <div class="h-64 w-48 bg-[#F9DF8A] flex flex-col justify-center items-center bg rounded-xl">
+          <img src="c1-assets/rabbit-cartoon.png" class="bg-white p-4 rounded-full mb-5" alt="dog logo">
+          <h6 class="font-bold">Rabbit</h6>
+          <p>2 items</p>
+        </div>
+
+      </div>       
+      </div>
+      <!-- Trending Pet Products -->
+       <div class="lg:bg-[#FFF9F4]">
+        <div class=" lg:container mx-auto lg:py-32">
+          <h3 class="font-adlam text-4xl mb-12 ml-5">Trending Pet Products</h3>
+        <div class="lg:flex">
+            <!-- Dog's T-shirt -->
+          <div class="w-96 bg-[#F9DF8A]  mx-5 rounded-lg mb-10 lg:mb-0">
+            <div class="w-72 absolute mt-10 ml-10">
+              <h4 class="text-2xl font-bold">T-shirt For Dogs</h4>
+              <p class="text-base py-3">Discover a world of treats, toy and <br> essentials handpicked for</p>
+              <a class="btn bg-white px-8">Shop Now</a>
+            </div>
+            <div class="relative h-96 w-96">
+                <img src="c1-assets/cute-pet-small.png" class="absolute bottom-0 left-44 w-max" alt="">
+            </div>            
+          </div>
+          <!-- Rating -->
+          <div class=" hidden md:grid grid-cols-3 gap-5">
+            <!-- r-card-1 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/dog-cartoon.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-2 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/fish-cartoon.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-3 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/bird-cartoon.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-4 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/rabbit-cartoon.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-4 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/bird-cartoon.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-6 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-7 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/fish-cartoon.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-8 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-9 -->
+            <div class="flex items-center bg-white p-3 pr-32 border-2 rounded-lg">
+              <div class="px-2">
+                <img src="c1-assets/rabbit-cartoon.png" alt="">
+              </div>
+              <div>
+                <p> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p>Pet Bed</p>
+                <p>$39.99</p>
+              </div>
+            </div>
+          </div>
+          <div class="md:hidden grid grid-cols-2 gap-2 px-2 mb-10">
+            <!-- r-card-1 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-2 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-3 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-4 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-5 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-6 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-7 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+            <!-- r-card-8 -->
+            <div class="flex items-center bg-white pr-5 border-2 rounded-lg">
+              <div class="">
+                <img src="c1-assets/pet-couch.png" class="bg-[#FFF9F4] p-4 mx-2 rounded-lg w-3/4 my-2" alt="">
+              </div>
+              <div>
+                <p class="text-sm"> <i class="fa-solid fa-star text-[#FFC107]"></i>  4.5</p>
+                <p class="text-sm">Pet Bed</p>
+                <p class="text-sm">$39.99</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        </div>  
+       </div>
+
+    </main>
 </body>
 </html>
